--- a/pag3.html
+++ b/pag3.html
@@ -16,7 +16,7 @@
         </p>
     </header>
     <nav>
-        <a href="idex.html">Casa</a>
+        <a href="index.html">Casa</a>
         <a href="pag2.html">Projetos desenhando</a>
         <a href="pag3.html">Montando projetos</a>
         <a href="agra.html">Agradecimentos</a>
